[package]
name = "voxel-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
rand = "0.9.2"
bevy_plugins = { git = "https://github.com/adambigg-s/bevy-plugins.git" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
